<?xml version="1.0"?>
<package>
  <name>arl_controllers</name>
  <version>0.1.0</version>
  <description>The arl_controllers package</description>

  <author email="arne.hitzmann@arl.sys.es.osaka-u.ac.jp">Arne Hitzmann</author>
  <maintainer email="arne.hitzmann@arl.sys.es.osaka-u.ac.jp">Arne Hitzmann</maintainer>
 
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>arl_interfaces</build_depend>
  <build_depend>arl_hw_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_toolbox</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>arl_interfaces</run_depend>
  <run_depend>arl_hw_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>control_toolbox</run_depend>


  <test_depend>rostest</test_depend>

  <export>
    <controller_interface plugin="${prefix}/muscle_controllers_plugins.xml"/>
  </export>
</package>
